--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,12 +13,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Go
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup
         uses: actions/setup-go@v5
         with:
           go-version-file: go.mod
-
       - name: Build
         run: go build -v ./...
