--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,12 +13,11 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Go
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup
         uses: actions/setup-go@v5
         with:
           go-version-file: go.mod
-
-      - name: Run tests
+      - name: Test
         run: go test -v ./...
